--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
                 <li><a href="/">home</a></li>
                 <li><a href="/blog">all posts</a></li>
                 <li><a href="/blog/newpost">new post</a></li>
+
+            </ul>
+            <ul id="user-account">
+                <li><a href="/login">login</a></li>
+                <li><a href="/logout">logout</a></li>
             </ul>
         </nav>
         {% block content %}
